[package]
name = "bluefox_game"
version = "0.1.0"
edition = "2021"

[lib]
name = "internal_bluefox_lib"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib"]


[[bin]]
name = "bluefox_game"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"
bevy_rapier3d = "0.23.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
libloading = "0.8.1"
moonshine-save = "0.3.4"
tempdir = "0.3.7"
